@@ -6,7 +6,7 @@
 #
 
 GARBAGECAT_HOME=~/workspace/garbagecat/target
-GARBAGECAT_VERSION=-3.0.1-SNAPSHOT
+GARBAGECAT_VERSION=-3.0.2-SNAPSHOT
 
 ##### Create GC Logging #####
 
@@ -20,6 +20,8 @@ java -Xms1m -Xmx64m -verbose:gc -Xlog:gc*:file=$GARBAGECAT_HOME/jdk11-par-new-cm
 
 java -Xms1m -Xmx64m -verbose:gc -Xlog:gc*:file=$GARBAGECAT_HOME/jdk11-g1.log -XX:+UseG1GC -jar $GARBAGECAT_HOME/garbagecat$GARBAGECAT_VERSION.jar -t 50 -o /dev/null ./gc.log
 
+java -Xms32m -Xmx64m -verbose:gc -Xlog:gc:file=$GARBAGECAT_HOME/jdk11-shenandoah.log -XX:+UseShenandoahGC -jar $GARBAGECAT_HOME/garbagecat$GARBAGECAT_VERSION.jar -t 50 -o /dev/null ./gc.log
+
 ##### Analyze GC Logging #####
 
 java -jar $GARBAGECAT_HOME/garbagecat$GARBAGECAT_VERSION.jar -p -t 50 -o $GARBAGECAT_HOME/jdk11-serial-new-serial-old.txt $GARBAGECAT_HOME/jdk11-serial-new-serial-old.log
@@ -31,3 +33,5 @@ java -jar $GARBAGECAT_HOME/garbagecat$GARBAGECAT_VERSION.jar -p -t 50 -o $GARBAG
 java -jar $GARBAGECAT_HOME/garbagecat$GARBAGECAT_VERSION.jar -p  -t 50 -o $GARBAGECAT_HOME/jdk11-par-new-cms.txt $GARBAGECAT_HOME/jdk11-par-new-cms.log
 
 java -jar $GARBAGECAT_HOME/garbagecat$GARBAGECAT_VERSION.jar -p -t 50 -o $GARBAGECAT_HOME/jdk11-g1.txt $GARBAGECAT_HOME/jdk11-g1.log
+
+java -jar $GARBAGECAT_HOME/garbagecat$GARBAGECAT_VERSION.jar -p -t 50 -o $GARBAGECAT_HOME/jdk11-shenandoah.txt $GARBAGECAT_HOME/jdk11-shenandoah.log
